# b3n-gatekeeper-auth

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml  publish-cli.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260603_0001_initial.py  20260604_0002_oauth_grants.py  20260604_0003_session_clients.py  20260604_0004_user_totp_mfa.py  20260604_0005_invitations.py  20260604_0006_mfa_recovery_codes.py  20260604_0007_client_mfa_policy.py  20260604_0008_org_mfa_policy.py  20260604_0009_session_device_trust.py  20260604_0010_session_idle_timeout_policy.py  20260604_0011_oauth_provider_management.py  20260604_0012_trusted_device_mfa_policy.py  20260604_0013_admin_step_up_policy.py  20260604_0014_client_app_metadata.py  20260604_0015_audit_retention_policy.py  20260604_0016_client_trust_metadata.py  (+3 more)
api/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  services.py
api/tests/: test_auth_core.py
cli/: README.md  pyproject.toml
cli/gatekeeper_cli/: __init__.py  auth.py  cli.py  config.py
cli/tests/: test_client_create.py
deploy/: .env.example.selfhost  Caddyfile.bootstrap  Caddyfile.existing-proxy.gatekeeper  Caddyfile.existing-proxy.http-bootstrap  docker-compose.existing-proxy.yml  docker-compose.selfhost.yml
docs/: architecture.md  concepts.md  getting-started.md  integrating-sentinel-knowhere.md  mcp-auth.md  selfhost.md
docs/integrations/: api-keys.md  api-only.md  backend.md  cli.md  mcp.md  product-backend-proxy.md  vue-nuxt.md  web-app.md
docs/internal/: integrating-sentinel-knowhere.md
docs/product/: api-first-auth-provider.md
docs/reference/: api-surface.md
docs/session-starters/: 2026-06-03-sentinel-knowhere-gatekeeper-integration.md
sdk/python/: README.md  pyproject.toml
sdk/python/gatekeeper_sdk/: __init__.py  fastapi.py
ui/: Caddyfile  Dockerfile  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.vue  main.ts  types.ts
(+30 files in other folders)
