[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3n-gatekeeper"
version = "0.1.1"
description = "B3n GateKeeper CLI for auth and token management"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "B3n Inc", email = "admin@b3n.in" }]
dependencies = [
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.scripts]
b3n-gatekeeper = "gatekeeper_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["gatekeeper_cli"]

[tool.hatch.build.targets.sdist]
include = ["gatekeeper_cli", "tests", "README.md", "pyproject.toml"]
