[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatekeeper-sdk"
version = "0.1.0"
description = "Python helpers for verifying GateKeeper JWTs and API tokens"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "B3n Inc", email = "admin@b3n.in" }]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.4.0",
]

